# nanokb

./: .env.example  .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml
.github/workflows/: ci.yml
.opencode/agents/: ghs-context-haiku.md  ghs-plan-designer.md  ghs-plan-reviewer.md
.opencode/skill/ghs/: SKILL.md
docs/: performance.md
docs/design/: knowledge-graph-extraction-qa-system.md
docs/ghs/plans/: 2026-06-24-extraction-cache-config-invalidation.md  2026-06-26-extract-concurrency.md  2026-06-27-build-embedding-status.md  2026-06-27-retrieval-scale-opt.md
docs/plans/: 2026-06-24-extraction-cache-and-config-invalidation.md
src/nanokb/: __init__.py  __main__.py  cli.py  config.py  config_signature.py  logging_setup.py  models.py  pipeline.py  session.py
src/nanokb/compile/: __init__.py  graph_builder.py
src/nanokb/extract/: __init__.py  base.py  cache.py  chunker.py  code_track.py  semantic_track.py
src/nanokb/index/: __init__.py  community.py  keyword_index.py  vector_store.py
src/nanokb/llm/: __init__.py  anthropic_client.py  base.py  embed_cache.py  ollama_client.py  openai_client.py  throttle.py
src/nanokb/load/: __init__.py  detector.py  ingest.py
src/nanokb/loaders/: __init__.py  base.py  code_loader.py  unstructured_loader.py
src/nanokb/qa/: __init__.py  generator.py  progress.py  prompt.py  retriever.py  review.py
src/nanokb/stage1_load/: __init__.py  ingest.py
src/nanokb/stage2_extract/: __init__.py  chunker.py
src/nanokb/stage3_compile/: __init__.py  graph_builder.py  normalize.py
src/nanokb/stage4_index/: __init__.py  keyword_index.py
src/nanokb/stage5_qa/: __init__.py  generator.py  retriever.py  review.py
src/nanokb/utils/: __init__.py  hashing.py  io.py  progress.py  tokenize.py
tests/: conftest.py  test_smoke.py
tests/fixtures/raw/: sample.md  sample.py  sample.txt
tests/integration/: test_code_extraction.py  test_cold_start.py  test_compile_md.py  test_concurrency_e2e.py  test_cross_process_progress.py  test_decoupled_embedder.py  test_deletion_propagation.py  test_embed_cache_resume.py  test_index_nodes_concurrency.py  test_modified_clean_rebuild.py  test_query.py  test_replay.py  test_review_loop.py  test_status_during_build.py  test_three_route_qa.py  test_watch_serial.py
tests/unit/: test_anthropic_tool_use.py  test_ask_search_stub.py  test_build_progress.py  test_chunker.py  test_cli_status.py  test_code_track.py  test_community.py  test_config_signature.py  test_detector.py  test_embed_batching.py  test_embed_cache.py  test_embed_cache_concurrency.py  test_extraction_cache.py  test_fusion.py  test_generator.py  test_graph_builder.py  test_graph_retriever.py  test_hashing.py  test_io.py  test_keyword_index.py  test_llm_factory.py  test_loaders.py  test_openai_rate_limit.py  test_parse_json_loose.py  test_progress.py  test_prompt.py  test_replay_dedup.py  test_review.py  test_review_should_flag.py  test_semantic_track.py  test_session.py  test_throttle.py  test_tokenize.py  test_vector_store.py
